--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -6,16 +6,10 @@
     --secondary-variant: #b33919;
     --auxilliary-variant: #b33919;
     /* font sizes */
-    --header-1: 80px;
-    --header-2: 64px;
-    --header-3: 40px;
-    --header-4: 32px;
-    --header-5: 28px;
-    --subtitle: 24px;
-    --body: 16px;
-    --small: 14px;
-    --button-text: 10px;
-    --mobile-font: 6px;
+    --text-1: calc(0.75rem + 1.5vw);
+    --text-2: calc(0.5rem + 0.75vw);
+    --text-3: calc(0.25rem + 0.75vw);
+    --text-4: calc(0.125rem + 0.75vw);
 }
 
 
@@ -24,7 +18,6 @@
     src: url("../assets/OpenSans-VariableFont_wdth\,wght.ttf");
 }
 
-/* Define the animation */
 @keyframes text-reveal {
     0% {
         opacity: 0;
@@ -37,56 +30,11 @@
     }
 }
 
-* {
-    font-family: "Open Sans", Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-    line-height: 140%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    -webkit-font-smoothing: antialiased;
-    min-width: fit-content;
-    scroll-behavior: smooth;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-}
-
-button {
-    background-color: var(--primary);
-    border: solid solid var(--primary);
-    padding: 6px 12px;
-    border-radius: 20px;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.24);
-}
-
-button a {
-    color: inherit;
-    text-decoration: none;
-}
-
-button:hover {
-    transform: translateY(-1px);
-    transition: box-shadow, transform 200ms ease-in-out 0s;
-    background-color: rgb(228, 228, 228);
-    color: var(--primary);
-    box-shadow: 21px 35px 128px -5px rgb(0, 0, 7);
-}
-
 /* This is for the animation effects */
 
 .animation {
     opacity: 0;
-    transform: translateY(calc(75% - 20px));
+    transform: translateY(6px);
     transition: all .7s ease-in-out 0s;
     z-index: 0;
 }
@@ -108,71 +56,112 @@ button:hover {
     transform: translateX(0);
 }
 
+* {
+    font-family: "Open Sans", Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 140%;
+}
 
-.hero {
-    width: 100%;
-    min-height: 100vh;
-    background-image: url(./img/background.png), radial-gradient(var(--primary), var(--secondary));
-    background-size: cover;
-    background-repeat: no-repeat;
-    object-fit: contain;
+body {
+    -webkit-font-smoothing: antialiased;
+    scroll-behavior: smooth;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(minmax(15em, 1fr), auto-fill);
+    grid-gap: .5vw;
+    align-items: center;
     overflow-x: hidden;
-    /* position: absolute; */
+    gap: 10vw;
 }
 
-.hero-inline {
+button {
+    background-color: var(--primary);
+    border: solid solid var(--primary);
+    padding: .25vw 2.5vw;
+    border-radius: 20px;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.24);
     display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
+    align-items: center;
 }
 
-Header {
-    width: 100%;
-    margin: 0 auto;
-    position: fixed;
-    height: 15vh;
-    /* margin-top: 2rem; */
+button a {
+    color: inherit;
+    text-decoration: none;
 }
 
-.hero-button {
+button a p {
+    font-size: var(--text-3);
+    font-weight: 600;
     width: 100%;
-    display: none;
+    text-align: center;
+}
+
+button:hover {
+    transform: translateY(-1px);
+    transition: box-shadow, transform 200ms ease-in-out 0s;
+    background-color: rgb(228, 228, 228);
+    color: var(--primary);
+    box-shadow: 21px 35px 128px -5px rgb(0, 0, 7);
 }
 
 
 #top {
-    transition: background-color 0.3s ease;
-    z-index: 99;
+    z-index: 999;
+    max-inline-size: 100%;
+    position: fixed;
+    height: 15vh;
+    top: 0;
+    width: 100%;
 }
 
-#top.scrolled {
+#nav.scrolled {
     background-color: #ffffff;
     /* z-index: 99; */
 }
 
-.nav {
-    width: 90%;
-    height: 60%;
+#nav {
+    /* transition: background-color 0.3s ease; */
+    max-inline-size: 95%;
+    height: 10vh;
+    margin: 1.5vw auto;
     background-color: white;
     border: 2px solid transparent;
     border-radius: 80px;
     box-shadow: 21px 35px 128px -25px rgba(0, 0, 7);
     cursor: pointer;
-    margin: 20px auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
+.icon img {
+    max-inline-size: 100%;
+    block-size: auto;
+    width: 15vw;
+    height: 15vw;
+    object-fit: contain;
+    margin-left: .5vw;
+}
+
 .nav-link {
-    width: 25%;
+    width: calc(100vw/4);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    margin-right: 20px;
+}
+
+.nav-link button {
+    width: 100%;
+    height: 3vw;
 }
 
 .dropdwn {
@@ -201,7 +190,6 @@ Header {
     display: none;
     position: absolute;
     background: hsla(0, 0%, 100%, 0.5);
-    min-width: 120px;
     height: 100px;
     box-shadow: 0 8px 16px 0 rgba(130, 130, 130, 0.2);
     z-index: 1;
@@ -232,27 +220,56 @@ header img {
     margin-left: 2rem;
 }
 
-.hero-title {
-    width: 75%;
-    margin: 30vh 5% 0;
-    color: white;
-    text-align: left;
+/* hero section */
+
+.hero {
+    height: calc(100vh + 10px);
+    overflow-y: hidden;
+    background-image: url(./img/background.png), radial-gradient(var(--primary), var(--secondary));
+    background-size: cover;
+    background-repeat: no-repeat;
+    object-fit: contain;
+    /* position: absolute; */
 }
 
-.hero-title h1 {
+.hero-inline {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.hero-title {
+    width: 87.5vw;
+    margin: 0 auto;
+}
+
+.hero-content {
+    color: #fff;
+    font-weight: 600;
+}
+
+.hero-content h1 {
     font-family: "Open Sans";
     font-weight: 800;
     letter-spacing: -2%;
-    font-size: var(--header-1);
+    text-shadow: 2px 2px 20px hsla(0, 0%, 0%, 0.8);
+    font-size: 6vw;
+}
+
+.hero-content h3 {
+    margin-top: 1.25rem;
+    width: 70%;
+    font-size: 2vw;
+    font-weight: 800;
     text-shadow: 2px 2px 20px hsla(0, 0%, 0%, 0.8);
 }
 
-.hero-title h3 {
-    margin-top: 1.25rem;
-    width: 70%;
-    font-size: var(--subtitle);
-    font-weight: 800;
-    text-shadow: 2px 2px 20px hsla(0, 0%, 0%, 0.8);
+.hero-button {
+    width: 100%;
+    display: none;
 }
 
 /* hero-animation */
@@ -266,14 +283,17 @@ header img {
 
 .infoHero {
     width: 100%;
-    min-height: 100vh;
+    height: 75vh;
 }
 
 .infoHero-wrapper {
     width: 90%;
-    margin: 20% auto;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -298,12 +318,12 @@ header img {
 }
 
 .infoHero-box-header {
-    font-size: var(--header-5);
+    font-size: var(--text-2);
     font-weight: 600;
 }
 
 .infoHero-box-body {
-    font-size: var(--small);
+    font-size: var(--text-2);
     font-weight: 500;
     line-height: 50px;
 }
@@ -312,16 +332,18 @@ header img {
 
 .shopHero {
     width: 100%;
-    min-height: 80vh;
+    height: 80vh;
 }
 
 .shopHero-container {
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    width: 90%;
-    margin: 5% auto;
+    gap: 2em;
 }
 
 .shopHero-img {
@@ -329,7 +351,7 @@ header img {
 }
 
 .shopHero-img img {
-    width: 80%;
+    width: 45vw;
     object-fit: contain;
 }
 
@@ -345,15 +367,19 @@ header img {
 
 
 .shopHero-header {
-    font-size: var(--header-3);
+    font-size: var(--text-1);
     font-weight: bold;
+}
+
+.shopHero-body p {
+    font-size: var(--text-3);
 }
 
 /* ShowHero Section */
 
 .showHero {
     width: 100%;
-    min-height: 80vh;
+    height: 60vh;
 }
 
 .showHero-container {
@@ -362,7 +388,8 @@ header img {
     justify-content: center;
     align-items: center;
     width: 90%;
-    margin: 5% auto;
+    height: 100%;
+    margin: 0 auto;
 }
 
 .showHero-img {
@@ -372,9 +399,9 @@ header img {
 }
 
 .showHero-img img {
-    width: 258px;
-    height: 504px;
-    /* object-fit: cover; */
+    width: 30vw;
+    height: 30vw;
+    object-fit: contain;
     /* z-index: 1000; */
 }
 
@@ -391,14 +418,14 @@ header img {
 }
 
 .showHero-header {
-    font-size: var(--header-3);
+    font-size: var(--text-1);
     font-weight: bold;
     width: 90%;
 }
 
 .showHero-body {
     width: 80%;
-    font-size: var(--small);
+    font-size: var(--text-3);
 }
 
 .showHero-btn {
@@ -408,8 +435,7 @@ header img {
 /* deliveryHero */
 .deliveryHero {
     width: 100%;
-    min-height: 100vh;
-    margin-bottom: 4rem;
+    height: 75vh;
 }
 
 .deliveryHero-container {
@@ -418,7 +444,8 @@ header img {
     justify-content: center;
     align-items: center;
     width: 90%;
-    margin: 10% auto;
+    height: 100%;
+    margin: 0 auto;
 }
 
 .deliveryHero-img {
@@ -446,15 +473,18 @@ header img {
 }
 
 .deliveryHero-header {
-    font-size: var(--header-3);
+    font-size: var(--text-1);
     font-weight: bold;
+}
+
+.downloadHero-body p {
+    font-size: var(--text-3);
 }
 
 /* downloadHero */
 .downloadHero {
     width: 100vw;
     height: 45vh;
-    margin-bottom: 6rem;
 }
 
 .downloadHero-container {
@@ -509,73 +539,7 @@ header img {
     margin-right: 4rem;
 }
 
-/* membership container */
-.membership {
-    width: 100vw;
-    min-height: 60vh;
-    margin-top: 4rem;
-}
-
-.membership-container {
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url("./img/image\ 45.jpg");
-    background-size: 90%;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-image: 50px;
-    color: white;
-}
-
-.membership-content {
-    width: 80%;
-}
-
-.membership-header h2 {
-    width: 60%;
-    margin: 0 auto;
-    text-align: center;
-    font-size: var(--header-4);
-}
-
-.membership-input {
-    margin: 5% auto;
-    display: flex;
-    flex-direction: row;
-}
-
-.membership-input input {
-    border: 1px solid white;
-}
-
-.membership-input input[type="email"] {
-    width: 70%;
-    height: 6vh;
-    border-radius: 20px;
-    cursor: text;
-    margin: 0 8rem;
-    position: relative;
-    padding-left: 1rem;
-    box-shadow: -6px 4px 14px 3px hsla(0, 0%, 67%, 0.5) inset;
-}
-
-.membership-input input[type="submit"] {
-    width: 10%;
-    height: 6vh;
-    position: absolute;
-    right: 25%;
-    border-radius: 20px;
-    background-image: linear-gradient(180deg, #ff8324, #b2572a);
-    border: 1px solid var(--primary);
-    color: rgba(255, 255, 255, 0.75);
-    font-weight: 700;
-    font-size: var(--body);
-    cursor: pointer;
-}
+/* footer */
 
 .footer {
     position: inherit;
@@ -659,6 +623,7 @@ ul {
 .footer-bottom-text {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     padding: 35px 100px 0px 0px;
     /* border: 5px solid red; */
@@ -667,411 +632,120 @@ ul {
 
 /* responsiveness */
 
-@media only screen and (max-width: 768px) {
-    body {
-        overflow-x: hidden;
-        width: 100%;
-        /* min-width: max-content; */
-    }
-
-    #top {
-        z-index: 1;
-    }
-
-    /* This is for the animation effects */
-
-    .animation {
-        opacity: 0;
-        transform: translateY(20px);
-        transition: all .7s ease-in-out 0s;
-        z-index: 0;
-    }
-
-    .scroll-animation {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .hero {
-        background-size: cover;
-        width: 100%;
-        min-height: 100%;
-        /* object-fit: fill; */
-    }
-
-    .hero-inline {
-        position: relative;
-        min-height: calc(100% - 25%);
-    }
-
-    .hero-title {
-        position: absolute;
-        top: 25%;
-        left: 6%;
-        right: 6%;
-        width: 80%;
-        z-index: 0;
-        text-align: center;
-        margin: 0;
-    }
-
-    .hero-title h1 {
-        font-size: calc(100vw / 15);
-        width: 100%;
-    }
-
-    .hero-title h3 {
-        font-size: calc(100vw / 25);
-        padding: 0;
-        margin-left: 0;
-        width: 100%;
-        /* width: 70%; */
-        /* margin-left: 1.25rem; */
-    }
-
-    .hero-button {
-        width: 80%;
-        z-index: 99;
+@media screen and (orientation: portrait) {
+    main {
         display: block;
-        margin: 2rem calc(40vw - 5rem);
-    }
-
-    .hero-button-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-    }
-
-    .hero-button .dropdwn {
-        background-color: white;
-        color: var(--primary);
     }
 
 
-    .nav {
-        justify-content: center;
-        width: 65%;
+    #nav {
+        margin: 5vw auto;
+        max-inline-size: 90%;
+        height: 6vh;
     }
 
     .nav-link {
-        display: none;
-        /* width: 50%; */
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 5vw;
     }
 
-    .infoHero {
-        min-height: 1024px;
+    .nav-link button {
+        width: 100%;
+        height: 2.5vh;
+    }
+
+    .hero-inline {
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .hero-title {
+        margin-top: 10rem;
+    }
+
+    .hero-content h1 {
+        font-size: 9.5vw;
+        font-weight: 800;
+    }
+
+    .hero-content h3 {
+        width: 90%;
+        font-size: 5vw;
+    }
+
+    .infoHero,
+    .deliveryHero {
+        height: 100vh;
     }
 
     .infoHero-wrapper {
         display: flex;
         flex-direction: column;
-        margin: 10% auto;
     }
 
-    .infoHero-box:not(:last-child) {
-        margin-bottom: 2rem;
+    .infoHero-icon img {
+        width: 20vw;
+        height: 20vw;
+        object-fit: contain;
     }
 
-    .infoHero-box-body p {
-        width: 60%;
-        margin: 0 auto;
+    .downloadHero {
+        display: none;
     }
 
     .shopHero {
-        min-height: 960px;
-        width: 90%;
-        margin: 0 auto;
+        height: 60vh;
     }
 
     .shopHero-container,
-    .showHero-container,
-    .deliveryHero-container,
-    .showHero-aside {
-        height: 100%;
+    .deliveryHero-container {
         display: flex;
         flex-direction: column;
-        text-align: justify;
+    }
+
+    .shopHero-img {
+        width: 100%;
+        height: 100%;
     }
 
     .shopHero-img img {
+        object-fit: cover;
         width: 100%;
-    }
-
-    .shopHero-aside {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .shopHero-btn {
-        margin-top: 2rem;
+        height: 100%;
     }
 
     .showHero {
-        margin: 0 auto;
-        width: 90%;
-        min-height: 400px;
+        margin-top: 2rem;
+        height: 30vh;
     }
 
-    .showHero-aside,
-    .showHero-body {
-        width: 100%;
-        margin: 0 auto;
+    .showHero-container {
+        display: flex;
+        flex-direction: column-reverse;
     }
 
     .showHero-img {
         display: none;
     }
 
-    .showHero-btn button {
-        margin: 0 auto;
-    }
-
     .deliveryHero {
-        margin-top: 6rem;
-        min-height: 960px;
-        margin-bottom: 0;
+        height: 100vh;
+        /* margin-bottom: 10rem; */
     }
 
     .deliveryHero-aside {
-        width: 90%;
-        margin: 0 auto;
-        align-items: center;
-    }
-
-    .downloadHero {
-        width: 100%;
-        height: 50vh;
-        margin-bottom: 0;
-    }
-
-    .downloadHero-Header>h1 {
-        font-size: 32px;
-    }
-
-    .downloadHero-container {
-        background: transparent;
-        color: #1D2832;
-    }
-
-    .downloadHero-img img {
-        width: 300px;
-        height: 300px;
-        object-fit: contain;
-    }
-
-    .membership {
-        margin: 0;
-        width: 100%;
-    }
-
-    .membership-container {
-        background-size: 100%;
-    }
-
-    .membership-content {
-        height: 30%;
-    }
-
-    .membership-input {
-        margin: 0;
-    }
-
-    .membership-input input[type="submit"] {
-        width: 75px;
-        right: calc(100% - 33em);
-    }
-
-}
-
-@media only screen and (max-width: 425px) {
-    .hero-title {
-        position: absolute;
-        top: 30%;
-        left: 12.5%;
-        right: 12.5%;
-        width: 70%;
-        z-index: 0;
-        text-align: center;
-        margin: 0;
-    }
-
-    .hero-title h1 {
-        font-size: calc(100vw / 15);
-        width: 100%;
-    }
-
-    .hero-title h3 {
-        font-size: calc(100vw / 25);
-        padding: 0;
-        margin-left: 0;
-        width: 100%;
-        /* width: 70%; */
-        /* margin-left: 1.25rem; */
-    }
-
-    .hero-button {
-        width: 80%;
-        z-index: 99;
-        display: block;
-        margin: 5vw auto;
-    }
-
-    .hero-button-inner {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-    }
-
-    .infoHero-wrapper {
-        width: 70%;
-        margin: 5% 15%;
-    }
-
-    .infoHero {
-        min-height: 960px;
-    }
-
-    .infoHero-box h2 {
-        font-size: calc(100vw /10);
-    }
-
-    .shopHero {
-        min-height: 820px;
-        margin-top: 2rem;
-    }
-
-    .shopHero-container,
-    .showHero-container,
-    .deliveryHero-container {
-        height: 100%;
-        width: 70%;
-        margin: 5% 15%;
-        display: flex;
-        flex-direction: column;
-        text-align: justify;
-    }
-
-
-    .shopHero-img {
-        flex: .5;
-    }
-
-    .shopHero-aside {
-        width: 100%;
-    }
-
-    .showHero {
-        min-height: 500px;
-    }
-
-    .deliveryHero {
-        margin-bottom: 4rem;
-    }
-
-    .deliveryHero {
-        min-height: 500px;
-    }
-
-    .deliveryHero-img {
-        display: none;
-    }
-
-    .downloadHero,
-    .membership {
-        display: none;
-    }
-}
-
-@media only screen and (max-width: 375px) {
-    .hero-title {
-        position: absolute;
-        top: 25%;
-        left: 8%;
-        right: 8%;
-        width: 80%;
-        z-index: 0;
-        text-align: center;
-        margin: 0;
-    }
-}
-
-@media only screen and (max-width: 320px) {
-    .hero-title {
-        position: absolute;
-        top: 30%;
-        left: 5%;
-        right: 5%;
-        width: 90%;
-        z-index: 0;
-        text-align: center;
-        margin: 0;
-    }
-
-    .infoHero {
-        min-height: 960px;
-    }
-
-    .infoHero-wrapper {
-        width: 70%;
-        margin: 5% 15%;
-    }
-
-    .infoHero-box h2 {
-        font-size: calc(100vw /12);
-    }
-
-    .infoHero-box-body p {
-        width: 80%;
-    }
-
-    .shopHero-container,
-    .showHero-container,
-    .deliveryHero-container {
-        height: 100%;
-        width: 70%;
-        margin: 5% 15%;
-        display: flex;
-        flex-direction: column;
-        text-align: start
-    }
-
-    .shopHero-header p,
-    .showHero-header p,
-    .deliveryHero-header p {
-        font-size: calc(100vw /12);
-    }
-
-    .shopHero {
-        margin-top: 6rem;
-    }
-
-    .deliveryHero-aside,
-    .showHero-aside {
-        align-items: flex-start;
-        text-align: start;
+        flex: 1.5;
     }
 
     .footer-logo {
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+
+    .footer-col {
         display: none;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    h1 {
-        font-size: 64px !important;
-    }
-}
-
-@media only screen and (min-width: 1440px) {
-    h1 {
-        font-size: 76px !important;
-    }
-
-    .hero-title {
-        margin: 20% 5% 0%;
     }
 
 }
